Improved proportional size with infoboxes. Extreme sizes are not a problem now.

--- a/index.html
+++ b/index.html
@@ -100,26 +100,25 @@
                     <div class="text">Hello World</div>
                 </div>
             </div>
-
-            <div class="box_container">
-                <div class="infobox">
-                    <div class="inside_box">
-                        <div class="topbar_inside_box"></div>
-                        <div class="leftbar_inside_box"></div>
-                        <div class="rightbar_inside_box"></div>
-                        <div class="bottombar_inside_box"></div>
-                        <div class="cross">
-
-                        </div>
+        </div>
+        <div class="box_container">
+            <div class="infobox">
+                <div class="inside_box">
+                    <div class="topbar_inside_box"></div>
+                    <div class="leftbar_inside_box"></div>
+                    <div class="rightbar_inside_box"></div>
+                    <div class="bottombar_inside_box"></div>
+                    <div class="cross">
                     </div>
                 </div>
-                <div class="infobox"></div>
-                <div class="infobox"></div>
-                <div class="infobox"></div>
-                <div class="infobox"></div>
-                <div class="infobox"></div>
             </div>
+            <div class="infobox"></div>
+            <div class="infobox"></div>
+            <div class="infobox"></div>
+            <div class="infobox"></div>
+            <div class="infobox"></div>
         </div>
+
     </div>
 
     <div class="w3-container w3-half">
@@ -133,7 +132,36 @@
             Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor.
             Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor.
             Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor.</p>
+
+        <div class="box_container">
+            <div class="infobox">
+                <div class="inside_box">
+                    <div class="topbar_inside_box"></div>
+                    <div class="leftbar_inside_box"></div>
+                    <div class="rightbar_inside_box"></div>
+                    <div class="bottombar_inside_box"></div>
+                    <div class="cross">
+
+                    </div>
+                </div>
+            </div>
+            <div class="infobox">
+                <div class="inside_box">
+                    <div class="topbar_inside_box"></div>
+                    <div class="leftbar_inside_box"></div>
+                    <div class="rightbar_inside_box"></div>
+                    <div class="bottombar_inside_box"></div>
+                    <div class="image_icon">
+                        <img src="imgs/in_construction.jpg"/>
+                    </div>
+                </div>
+            </div>
+            <div class="infobox"></div>
+            <div class="infobox"></div>
+        </div>
+
     </div>
+
 
     <div class="w3-container">
         <a href="#Welcome">
