Improved slightly the html file. Fixed temporally bug with divider and graph canvas size annoyingly attached to mouse (need to improve)

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <a href="#Experience" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> Experience</a>
         <a href="#AboutMe" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> AboutMe</a>
         <a href="#Contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> Contact</a>
+        <a href="https://twitter.com/marcosbernal_es" class="w3-bar-item w3-button w3-hide-small w3-right"><i class="fa fa-twitter w3-hover-opacity"></i></a>
         <a href="https://es.linkedin.com/in/marcosbernalespana" class="w3-bar-item w3-button w3-hide-small w3-right"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
         <a href="https://github.com/MarcosBernal" class="w3-bar-item w3-button w3-hide-small w3-right"><i class="fa fa-github w3-hover-opacity"></i></a>
     </div>
@@ -397,10 +398,12 @@
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-24">
     <div class="w3-xlarge w3-section">
-        <a href="https://github.com/MarcosBernal"><i class="fa fa-github w3-hover-opacity"></i></a>
-        <a href="https://es.linkedin.com/in/marcosbernalespana"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+        <a href="https://github.com/MarcosBernal" class="w3-bar-item w3-button w3-hover-opacity w3-round-small"><i class="fa fa-github"></i></a>
+        <a href="https://es.linkedin.com/in/marcosbernalespana" class="w3-bar-item w3-button w3-hover-opacity w3-round-small"><i class="fa fa-linkedin"></i></a>
+        <a href="https://twitter.com/marcosbernal_es" class="w3-bar-item w3-button w3-hover-opacity w3-round-small"><i class="fa fa-twitter"></i></a>
     </div>
-    <p>W3CSS Theme Made By <a href="#" style="font-weight: bold; text-decoration: none;">Marcos Bernal</a></p>
+    <p>Created with <span class="fa fa-heart"></span> by <a href="#" style="font-weight: bold; text-decoration: none;">Marcos Bernal</a></p>
+    <a href="https://github.com/MarcosBernal/marcosbernal.github.io" class="w3-small"><p> Find more details and credits in Marcos' github repo</p></a>
 </footer>
 
 
