Removed non-used files. Improved about me graph, canvas and interaction. Added a notification for contact(in_construction)

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 <!--+++++++++++++ Experience ++++++++++++++++++++++++++++-->
     <div class="w3-container w3-padding-64 web_section" id="Experience">
-        <div class="w3-half">
+        <div class="w3-half w3-padding-small">
             <div class="intro_text">
             <h4>Projects</h4>
             <p>Right now it seems empty, but wait a little you will see my new projects :D</p>
@@ -147,11 +147,11 @@
             </div>
         </div>
 
-        <div class="w3-half">
+        <div class="w3-half w3-padding-small">
             <div class="intro_text">
             <h4>Experiences</h4>
             <p>Well, let's present my 'wannabe' blog.</p>
-            <p>Here you can find short articles containing my opinion as well as some experiences worthy to share.</p>
+            <p>Here you should find short articles containing my opinion as well as some experiences worthy to share.</p>
 
             </div>
             <div class="_box_container">
@@ -288,7 +288,7 @@
                     <p> My interest are quite large and mainly focused, but not limited, on <span itemprop="seeks">computer engineering and</span>, by extension, <span itemprop="seeks">data science</span>.
                         I like robotics, software developing (including videogames :P), security, networking, data mining and machine learning. I like to learn something useful everyday and I do my best to achieve it.</p>
 
-                    <img src="imgs/in_construction.jpg" align="left"/>
+                    <img src="imgs/HCE-berlin/me_working_in_success_cases.jpg" align="left"/>
                     <p>If I had to sum up myself, I would say that I am a problem solving person. I really like easy problems and
                         medium ones, but hard problems are not big deal since one can split them and
                         have several small lovely problems instead!</p>
@@ -313,8 +313,9 @@
 <!--+++++++++++++ Contact ++++++++++++++++++++++++++++-->
     <div class="w3-display-container" id="Contact">
         <div class="w3-container w3-padding-64">
+            <div id="in_construction">Not Ready</div>
             <h4>Contact</h4>
-            <form action="">
+            <form id="contact_form">
                 <div class="w3-half">
                     <div class="w3-row w3-section">
                         <div class="w3-col"><i class="w3-xxlarge fa fa-user"></i></div>
