Update infobox submodule added reacting feature and additional content loading.

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 <div class="w3-black" id="nav_menu">
     <div class="w3-bar">
         <a href="#nav_menu" class="w3-bar-item w3-button"><i class="fa fa-home"></i> Welcome</a>
-        <a href="#Experience" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> Experience</a>
-        <a href="#AboutMe" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> AboutMe</a>
+        <a href="#Experience" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> Experience</a>
+        <a href="#AboutMe" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> AboutMe</a>
         <a href="#Contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> Contact</a>
         <a href="https://twitter.com/marcosbernal_es" class="w3-bar-item w3-button w3-hide-small w3-right"><i class="fa fa-twitter w3-hover-opacity"></i></a>
         <a href="https://es.linkedin.com/in/marcosbernalespana" class="w3-bar-item w3-button w3-hide-small w3-right"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
@@ -100,7 +100,7 @@
             <p>Right now it seems empty, but wait a little you will see my new projects :D</p>
             <p>In this space, I will be referenced all kind of projects. Why do not you take a look? maybe one of them get your attention.</p>
             </div>
-            <div class="_box_container">
+            <div class="_box_container _reacting_infobox">
                 <div class="_infobox" id="degree_project">
                     <div class="_inside_box">
                         <div class="_topbar_inside_box"></div>
@@ -130,7 +130,7 @@
                         <div class="_rightbar_inside_box"></div>
                         <div class="_bottombar_inside_box"></div>
                         <div class="_image_icon">
-                            <img src="imgs/in_construction.jpg" alt="Personal Project aiming for creating my own services" class="w3-hover-grayscale"/>
+                            <img src="imgs/my_raspberry_pi_intro.jpg" alt="Presentation of my small personal server" class="w3-hover-grayscale"/>
                         </div>
                     </div>
                 </div>
@@ -151,10 +151,10 @@
             <div class="intro_text">
             <h4>Experiences</h4>
             <p>Well, let's present my 'wannabe' blog.</p>
-            <p>Here you should find short articles containing my opinion as well as some experiences worthy to share.</p>
+            <p>Here you should find short articles containing my opinion as well as some experiences that may be worthy to share.</p>
 
             </div>
-            <div class="_box_container">
+            <div class="_box_container _reacting_infobox">
                 <div class="_infobox" id="openhacknice">
                     <div class="_inside_box">
                         <div class="_topbar_inside_box"></div>
@@ -201,71 +201,17 @@
             </div>
         </div>
     </div>
+    <div class="_modal_popup" id="degree_project_popup"><div class="_modal_popup-content"></div></div>
 
-    <div class="_modal_popup" id="degree_project_popup">
-        <div class="_modal_popup-content">
-            <span class="_modal_popup-close">&times;</span>
-            <h2 class="w3-centered"> A wild solar tracker has appeared!</h2>
-            <img src="imgs/in_construction.jpg"/>
-            <p>Before ending my bachelor I had already decided to build some robotic device.</p> <br>
-            <p>I was Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor.</p>
-        </div>
-    </div>
+    <div class="_modal_popup" id="infobox_project_popup"><div class="_modal_popup-content"></div></div>
 
-    <div class="_modal_popup" id="infobox_project_popup">
-        <div class="_modal_popup-content">
-            <span class="_modal_popup-close">&times;</span>
-            <h2 class="w3-centered"> How to show your impressive portfolio?</h2>
-            <img src="imgs/in_construction.jpg"/>
-            <p>Of course with infobox_matrix!!</p>
-            <p>Well maybe not, however this project was created because I needed it, and in
-                the meantime I refreshed my old javascript knowledge. To be honest, it is a very humble project,
-                but it is available for anyone who needs it.</p>
-        </div>
-    </div>
+    <div class="_modal_popup" id="personal_server_popup"><div class="_modal_popup-content"></div></div>
 
-    <div class="_modal_popup" id="personal_server_popup">
-        <div class="_modal_popup-content">
-            <span class="_modal_popup-close">&times;</span>
-            <h2 class="w3-centered"> One server to rule them all!!</h2>
-            <img src="imgs/in_construction.jpg"/>
-            <p>We live in a really good period, at least, for tech lovers. We have access to many services and resources
-                that not so long ago were not even thought about.</p>
-            <p>...</p>
-        </div>
-    </div>
+    <div class="_modal_popup" id="openhacknice_popup"><div class="_modal_popup-content"></div></div>
 
+    <div class="_modal_popup" id="summerschoolmunich_popup"><div class="_modal_popup-content"></div></div>
 
-    <div class="_modal_popup" id="openhacknice_popup">
-        <div class="_modal_popup-content">
-            <span class="_modal_popup-close">&times;</span>
-            <h2 class="w3-centered"> My first hackathon award!</h2>
-            <img src="imgs/openhack/team_working.jpg"/>
-            <p>Look at the image. Ok, now once more. Could you guess how many hours we were working together before that picture?</p>
-            <p>Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor.</p>
-        </div>
-    </div>
-
-    <div class="_modal_popup" id="summerschoolmunich_popup">
-        <div class="_modal_popup-content">
-            <span class="_modal_popup-close">&times;</span>
-            <h2 class="w3-centered"> Decentralizing the production in Munich!</h2>
-            <img src="imgs/summer_school/everyone_front_tum.jpg"/>
-            <p>Trying something as text</p>
-            <p>Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor.</p>
-        </div>
-    </div>
-
-    <div class="_modal_popup" id="tadhackmadrid_popup">
-        <div class="_modal_popup-content">
-            <span class="_modal_popup-close">&times;</span>
-            <h2 class="w3-centered"> Time to learn about telco APIs!</h2>
-            <img src="imgs/in_construction.jpg"/>
-            <p>Trying something as text</p>
-            <p>Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor.</p>
-        </div>
-    </div>
-
+    <div class="_modal_popup" id="tadhackmadrid_popup"><div class="_modal_popup-content"></div></div>
 
 
 <!--+++++++++++++ AboutMe ++++++++++++++++++++++++++++-->
