Added license to the website content in the footer

--- a/index.html
+++ b/index.html
@@ -312,10 +312,13 @@
         <a href="https://es.linkedin.com/in/marcosbernalespana" class="w3-bar-item w3-button w3-hover-opacity w3-round-small"><i class="fa fa-linkedin"></i></a>
         <a href="https://twitter.com/marcosbernal_es" class="w3-bar-item w3-button w3-hover-opacity w3-round-small"><i class="fa fa-twitter"></i></a>
     </div>
-    <p>Created with <span class="fa fa-heart"></span> by <a href="#" style="font-weight: bold; text-decoration: none;">Marcos Bernal</a></p>
-    <a href="https://github.com/MarcosBernal/marcosbernal.github.io" class="w3-small"><p> Find more details and credits in Marcos' github repo</p></a>
+    <p>Created with <a href="https://github.com/MarcosBernal/marcosbernal.github.io"><span class="fa fa-heart"></span> by <span style="font-weight: bold; ">Marcos Bernal</span></a>.</p>
+    <div class="license">
+        <p class="w3-small"><span>Content licensed <a href="https://creativecommons.org/licenses/by-sa/4.0/" style="font-weight: bold;" >CC BY-SA</a></span> © 2017 Marcos Bernal España</p>
+        <a href="https://github.com/MarcosBernal/marcosbernal.github.io" class="w3-small"><p> Details and credits in Marcos' github repo</p></a>
+        <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a>
+    </div>
 </footer>
-
 
 </body>
 </html> 
